--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -154,6 +154,10 @@
     .contact-info-container {
         margin: 0;
     }
+    .contact-info-container p,
+    .nav-links li a {
+        font-size: 1rem;
+    }
     
 }
 
